--- a/src/app.yaml
+++ b/src/app.yaml
@@ -4,7 +4,10 @@ api_version: 1
 threadsafe: true
 
 handlers:
-- url: /.*
+- url: /static
+  static_dir: static
+
+- url: .*
   script: router.app
 
 libraries:
