--- a/src/index.yaml
+++ b/src/index.yaml
@@ -12,6 +12,12 @@ indexes:
 
 - kind: Posts
   properties:
+  - name: id
+  - name: creation_date
+    direction: desc
+
+- kind: Posts
+  properties:
   - name: user
   - name: creation_date
     direction: desc
