--- a/src/index.yaml
+++ b/src/index.yaml
@@ -10,6 +10,13 @@ indexes:
 # automatically uploaded to the admin console when you next deploy
 # your application using appcfg.py.
 
+- kind: Comment
+  ancestor: yes
+  properties:
+  - name: is_deleted
+  - name: creation_date
+    direction: desc
+
 - kind: Post
   properties:
   - name: is_deleted
